# doom-device

./: CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/game/: crosshair.cpp  crosshair.h  map.cpp  map.h  player.cpp  player.h  rail.cpp  rail.h
main/io/: controller.cpp  controller.h  display.c  display.h
main/math/: intersect.cpp  intersect.h  math.cpp  math.h
main/render/: frame_renderer.cpp  frame_renderer.h  portal_renderer.cpp  portal_renderer.h  rasterizer.cpp  rasterizer.h  render_config.h  render_util.cpp  render_util.h
